# targetfit

./: .gitignore  AGENTS.md  README.md  cli.py  config.yaml  db.py  example.md  llm.py  prompts.md  pyproject.toml  requirements.txt  scoring.py  scrape.py  utils.py  viz.py
.github/: copilot-instructions.md
data/: companies.csv  companies.example.csv  url_probe_results.md
docs/: explore.md
targetfit/: __init__.py  __main__.py  cli.py  config.py  helpers.py  log.py  models.py  scoring.py  viz.py
targetfit/ingestion/: __init__.py  ats_api.py  scrape.py  url_builder.py
targetfit/nlp/: __init__.py  cv_parser.py  llm.py
targetfit/storage/: __init__.py  db.py  io.py
tests/: probe_urls.py
